--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ body {
   line-height: 1.5;
   color:  #28a745;
   text-align: left;
-  background-color: #fff;
+  background-color: #82ab80;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
