--- a/css/style.css
+++ b/css/style.css
@@ -59,9 +59,9 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color:  #28a745;
+  color:  #164cc0;
   text-align: left;
-  background-color: #82ab80;
+  background-color: #9fe49b;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -158,7 +158,7 @@ a {
 }
 
 a:hover {
-  color: #e6b400;
+  color: #08e600;
   text-decoration: underline;
 }
 
