--- a/css/style.css
+++ b/css/style.css
@@ -152,13 +152,13 @@ sup {
 }
 
 a {
-  color: ##459cde;
+  color: #459cde;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #08e600;
+  color: #459cde;
   text-decoration: underline;
 }
 
@@ -364,7 +364,7 @@ h1, h2, h3, h4, h5, h6,
   margin-bottom: 0.5rem;
   font-weight: 500;
   line-height: 1.2;
-  color: #3D464D;
+  color: #0a2e4a;
 }
 
 h1, .h1 {
