--- a/css/style.css
+++ b/css/style.css
@@ -9296,11 +9296,11 @@ a.text-info:hover, a.text-info:focus {
 }
 
 .text-warning {
-  color: #ffc107 !important;
+  color: #65c28a !important;
 }
 
 a.text-warning:hover, a.text-warning:focus {
-  color: #ba8b00 !important;
+  color: #7ad689 !important;
 }
 
 .text-danger {
@@ -9390,7 +9390,7 @@ a.text-dark:hover, a.text-dark:focus {
   }
   pre,
   blockquote {
-    border: 1px solid #adb5bd;
+    border: 1px solid #91acc7;
     page-break-inside: avoid;
   }
   thead {
@@ -9430,11 +9430,11 @@ a.text-dark:hover, a.text-dark:focus {
   }
   .table td,
   .table th {
-    background-color: #fff !important;
+    background-color: #5b70b5 !important;
   }
   .table-bordered th,
   .table-bordered td {
-    border: 1px solid #dee2e6 !important;
+    border: 1px solid #89bff5 !important;
   }
   .table-dark {
     color: inherit;
@@ -9443,11 +9443,11 @@ a.text-dark:hover, a.text-dark:focus {
   .table-dark td,
   .table-dark thead th,
   .table-dark tbody + tbody {
-    border-color: #dee2e6;
+    border-color: #89bff5;
   }
   .table .thead-dark th {
     color: inherit;
-    border-color: #dee2e6;
+    border-color: #89bff5;
   }
 }
 
@@ -9552,7 +9552,7 @@ a.text-dark:hover, a.text-dark:focus {
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(44, 204, 191, 0.5);
+  background: rgba(89, 229, 217, 0.1);
   z-index: 1;
 }
 
@@ -9594,17 +9594,17 @@ a.text-dark:hover, a.text-dark:focus {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: rgba(44, 204, 191, 0.5);
+  background: rgba(89, 229, 217, 0.1);
   z-index: 1;
 }
 
 .cat-item {
-  background: #413db8;
+  background: #6ded82;
   transition: .5s;
 }
 
 .cat-item:hover {
-  background: #4a8bed
+  background: #80d2ed;
 }
 
 .cat-item img {
